tests/integration/snapshots/integration__update__update_all_dependencies-2.snap
---
source: tests/integration/update.rs
expression: second_lockfile
---
# This file is automatically @generated by Wally.
# It is not intended for manual editing.
registry = "test"

[[package]]
name = "diamond-graph/direct-dependency-a"
version = "0.1.0"
dependencies = [["Indirect", "diamond-graph/indirect-dependency-a@0.1.1"]]

[[package]]
name = "diamond-graph/direct-dependency-b"
version = "0.1.0"
dependencies = [["Indirect", "diamond-graph/indirect-dependency-a@0.2.0"]]

[[package]]
name = "diamond-graph/indirect-dependency-a"
version = "0.1.1"
dependencies = []

[[package]]
name = "diamond-graph/indirect-dependency-a"
version = "0.2.0"
dependencies = []

[[package]]
name = "diamond-graph/root"
version = "0.1.0"
dependencies = [["A", "diamond-graph/direct-dependency-a@0.1.0"], ["B", "diamond-graph/direct-dependency-b@0.1.0"]]

