tests/integration/snapshots/integration__update__update_all_dependencies.snap
---
source: tests/integration/update.rs
expression: lockfile
snapshot_kind: text
---
# This file is automatically @generated by Wally.
# It is not intended for manual editing.
registry = 'test'

[[package]]
name = 'diamond-graph/direct-dependency-a'
version = '0.1.1'
dependencies = [[
    'Indirect',
    'diamond-graph/indirect-dependency-a@0.1.1',
]]

[[package]]
name = 'diamond-graph/direct-dependency-b'
version = '0.1.0'
dependencies = [[
    'Indirect',
    'diamond-graph/indirect-dependency-a@0.2.1',
]]

[[package]]
name = 'diamond-graph/indirect-dependency-a'
version = '0.1.1'
dependencies = []

[[package]]
name = 'diamond-graph/indirect-dependency-a'
version = '0.2.1'
dependencies = []

[[package]]
name = 'diamond-graph/root'
version = '0.1.0'
dependencies = [
    [
    'A',
    'diamond-graph/direct-dependency-a@0.1.1',
],
    [
    'B',
    'diamond-graph/direct-dependency-b@0.1.0',
],
]
